--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "sass-loader": "^10.1.1",
     "tippy.js": "^6.3.1"
   },
   "devDependencies": {
     "@nuxtjs/svg": "^0.2.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "sass": "^1.39.2"
+    "sass": "^1.39.2",
+    "sass-loader": "^10.1.1"
   }
 }
