--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "party-js": "^2.0.1",
     "tippy.js": "^6.3.1"
   },
   "devDependencies": {
