--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@splidejs/vue-splide": "^0.3.5",
     "core-js": "^3.15.1",
     "dotenv": "^10.0.0",
     "nuxt": "^2.15.7",
