--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^10.0.0",
     "nuxt": "^2.15.7",
     "party-js": "^2.0.1",
-    "tippy.js": "^6.3.1"
+    "tippy.js": "^6.3.1",
+    "vuesax": "^4.0.1-alpha.25"
   },
   "devDependencies": {
     "@nuxtjs/svg": "^0.2.0",
