--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.39.2",
     "sass-loader": "^10.1.1"
+  },
+  "engines": {
+    "node": "14.17.6",
+    "npm": "7.19.1"
   }
 }
