--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@splidejs/vue-splide": "^0.3.5",
     "core-js": "^3.15.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "firebase": "^9.0.2",
     "nuxt": "^2.15.7",
     "party-js": "^2.0.1",
+    "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
     "tippy.js": "^6.3.1",
     "vuesax": "^4.0.1-alpha.25"
   },
