--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@nuxtjs/svg": "^0.2.0",
+    "nuxt-windicss": "^2.4.2",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.39.2",
